--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,13 @@ extends layout
 block content
   h1= title
   p working on #{title}
-  button(type="button", class="btn btn-primary") Press Me
+  button(type="button", class="btn btn-primary", onClick = "doBump()") Press Me
+  div(id = "bump") Bump the count
+  script. 
+    let count = 0;
+    let bump  = 1;
+    function doBump() {
+      count = bump;
+      bump = bump+1;
+      document.getElementById('bump').innerHTML = `Count ${count} with bump ${bump}`;
+    }
