added array of objects carmodels in mercedes benz pug file

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,10 @@ block content
   h1= title
   p working on #{title}
   button(type="button", class="btn btn-primary", onClick = "doBump()") Press Me
+  p 
   div(id = "bump") Bump the count
+  p
+  a(href="mercedesBenz") MercedesBenz
   script.
     let count = 0;
     let bump  = 1;
