added table related functionality in the gridbuild page

--- a/views/gridbuild.pug
+++ b/views/gridbuild.pug
@@ -2,3 +2,27 @@ extends layout
 
 block content
   h1= title
+  p Number of Rows = #{query.rows} and Number of columns =  #{query.cols}
+  - var rows = Number(query.rows) 
+  - var cols = Number(query.cols)
+  - if(!Number.isInteger(rows)) {
+      p Entered row value in not integer
+  - }
+  - else if(!Number.isInteger(Number(cols))) {
+      p Entered column value in not integer
+  - }
+  - else if (!(rows >= 1 && rows <= 10)) {
+      p Entered rows range must be in 1 to 10
+  - }
+  - else if (!(cols >= 1 && cols <= 10)) {
+      p Entered cols range must be in 1 to 10
+  - }
+  - else {
+        table#outer
+            - for(let i = 0; i < rows; i++) {
+                tr#middle 
+                    - for(let j = 0; j < cols; j++) {
+                        td= (1 + i + j * rows)
+                    - }
+            - }
+  - }
