--- a/views/selector.pug
+++ b/views/selector.pug
@@ -2,3 +2,8 @@ extends layout
 
 block content
   h1= title
+  - var image_names = ["car1.jpg", "car2.jpg", "car3.jpg", "car4.jpg", "car5.jpg"];
+    - for(let i = 0; i < 3; i++) {
+        - let ranValue = Math.floor(Math.random() * 5);
+        img(src=`/images/${image_names[ranValue]}`, alt="Car Image", height="300px", width="300px")
+    - }
