done bonus related functionality and added alert

--- a/views/mercedesBenz.pug
+++ b/views/mercedesBenz.pug
@@ -6,4 +6,8 @@ block content
     div(class = 'container-fluid')
       div(class = 'row')
         each item,index in results 
-          div(class="col-sm-2") CarModel : #{item["carModel"]} <br> CarPrice : #{item["carPrice"]} <br> CarColor: #{item["carColor"]}
+          div(class="col-sm-2", onClick=`buy(${index})`) CarModel : #{item["carModel"]} <br> CarPrice : #{item["carPrice"]} <br> CarColor: #{item["carColor"]}
+          script.
+            function buy(val) {
+              alert(`You purchased item ${val}`)
+            }
